force-app/main/default/objects/Lunch_Order__c/Lunch_Order__c.object-meta.xml
<CustomObject>
    <label>Lunch Order</label>
    <nameField>
        <displayFormat>LB{00000}</displayFormat>
        <label>Lunch Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lunch Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>