force-app/main/default/objects/Lunch_Order__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Ordered</fullName>
            </value>
            <value>
                <fullName>Spot Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>