force-app/main/default/objects/Lunch_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lunch Orders</relationshipLabel>
    <relationshipName>Lunch_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>