force-app/main/default/objects/Lunch_Order__c/fields/QRCode__c.field-meta.xml
<CustomField>
    <fullName>QRCode__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=250x250&amp;cht=qr&amp;chl=&apos;+Name,&apos;test&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QRCode</label>
    <type>Text</type>
</CustomField>